# ECS

./: .gitignore  README.md  pyproject.toml
dataset/: Amazon-C4-formatting.ipynb  README.md  api_request_parallel_processor.py  batch-processing_query-generation.ipynb  batch-query-generation.ipynb  benchmark.ipynb  categories-dev.ipynb  complementary.ipynb  config.yaml  data_processing.ipynb  llm_reranker.ipynb  marqo-gs-dataset.ipynb  prompts.py  query-generation-prompt-dev.ipynb  response_structure.py  top_k-dev.ipynb  top_k.py  utils.py  view_products.ipynb
dataset/scripts/: embed_products.py  top-k.py  utils.py
embeddings/: train-dev.ipynb
reranker/: gpt_reranker.py  llm_reranker.ipynb  prompts.py
