[tool.poetry]
name = "ecs"
version = "0.1.0"
description = ""
authors = ["Milutin-S <studen.m98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.31"
loguru = "^0.7.2"
tqdm = "^4.66.4"
datasets = "^2.20.0"
pandas = "^2.2.2"
openai = "^1.40.8"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0.post1"
transformers = "^4.44.2"
accelerate = "^0.34.2"
quanto = "^0.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
